# BackgroundTradingSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md
ref/: readme.md
ref/kubernetes/deployment_yaml/: mmm.yaml  tool.yaml  trade.yaml
ref/sql_script/: data.sql
ref/src/bank_module/: mmm.py  mmm_test.py  request-mmm.json  web_test.py
ref/src/tool_module/: pom.xml  readme.md
ref/src/tool_module/src/main/java/: CheckProp.java  Data.java  RequestExecute.java  Server.java  handle_User_Prop.java
ref/src/trade_module/: CMakeLists.txt  build_docker.sh  client.sh  config.json  config_service.json  dockerfile  readme.md  run_docker.sh  server.cc  start.sh
ref/src/trade_module/controller/: http_client.cc  http_client.h  http_client_async.cc  http_client_async.h  http_client_cb.cc  http_client_cb.h  mysql_base.cc  mysql_base.h  trade_db_client.cc  trade_db_client.h  trade_operate.cc  trade_operate.h  trade_service.cc  trade_service.h  trade_service_cb.cc  trade_service_cb.h
ref/src/trade_module/tests/: CMakeLists.txt  data.txt  test.py  test_mysql_manager.cpp  test_trade_operate.cpp
ref/src/user_module/: client.py  database.py  server.py
ref/test_script/: service_config.json  test_all.py
src/: MysqlFactory.cpp  MysqlFactory.h
src/DataBase/: mysql_conn.cc  mysql_conn.h
src/GPRC/: gRPC.h
src/Logger/: Makefile  file.txt  logger.cc  logger.h  logger22.cc  logger22.h
src/WebServer/: httpConn.cc  httpConn.h  http_conn.cpp  http_conn.h  locker.cc  locker.h  main.cc  main.cpp  threadPool.h  threadpool.h  webTest
src/webServer/: main.cpp
temp/: comhead.h  linkedlist.cc
test/: DataBase.cc  LoggerTest.cc
